--- a/src/main/resources/templates/fragments/otherreports/personalcapacitadoreporte.html
+++ b/src/main/resources/templates/fragments/otherreports/personalcapacitadoreporte.html
@@ -150,7 +150,7 @@
         });
    
      $('#excel').click(function(){
-            $("#form1").attr('action', '../costosxls');
+            $("#form1").attr('action', '../capacitadosxls');
             $("form#form1").submit();
             
         });   
