--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_personalcapacitado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_personalcapacitado.jrxml
@@ -10,7 +10,7 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT count(a.codigoempleado) as Noempleados, a.ubicacionasistenciacapacitacion as Ubicacion, count(c.nombrecapacitacion) as NoCapacitaciones,c.nombrecapacitacion, c.fechacapacitaciondesde as FechaCapacitacion,c.fechacapacitacionhasta
+		<![CDATA[SELECT count(a.codigoempleado) as Noempleados, a.ubicacionasistenciacapacitacion as Ubicacion, count(c.nombrecapacitacion) as NoCapacitaciones,c.nombrecapacitacion, DATE_FORMAT(c.fechacapacitaciondesde, "%d/ %m /%Y") as FechaCapacitacion,c.fechacapacitacionhasta
 FROM `asistenciacapacitacion`a ,`capacitacion` c
 WHERE a.codigocapacitacion=c.codigocapacitacion group by c.nombrecapacitacion,c.fechacapacitaciondesde and
 c.fechacapacitaciondesde >= STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
@@ -22,7 +22,7 @@ and c.fechacapacitacionhasta <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<field name="nombrecapacitacion" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="FechaCapacitacion" class="java.sql.Timestamp">
+	<field name="FechaCapacitacion" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="fechacapacitacionhasta" class="java.sql.Timestamp">
@@ -32,212 +32,209 @@ and c.fechacapacitacionhasta <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 		<band/>
 	</background>
 	<title>
-		<band height="152">
+		<band height="118">
 			<staticText>
-				<reportElement x="138" y="20" width="265" height="20" uuid="58072731-a91f-4e03-af05-0525194d0c4e"/>
-				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" isBold="true"/>
-				</textElement>
-				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="9" y="74" width="114" height="20" uuid="908348f9-35c7-41c1-89f4-1481f51ad07c"/>
+				<reportElement x="50" y="93" width="114" height="20" uuid="908348f9-35c7-41c1-89f4-1481f51ad07c"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="138" y="40" width="265" height="20" uuid="d1b2bb45-d56d-4b34-8582-5e56510c1e4f"/>
-				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" isBold="true"/>
-				</textElement>
-				<text><![CDATA[SISADMRH]]></text>
-			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="81" y="74" width="70" height="20" uuid="57f3ba13-189f-4cd8-9af9-2876c75cbc54"/>
+				<reportElement x="115" y="93" width="70" height="20" uuid="57f3ba13-189f-4cd8-9af9-2876c75cbc54"/>
 				<textElement textAlignment="Right">
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="490" y="75" width="26" height="20" uuid="52a58595-ce34-4b5a-8e1c-db32c0ca9f8a"/>
+				<reportElement x="487" y="93" width="26" height="20" uuid="52a58595-ce34-4b5a-8e1c-db32c0ca9f8a"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="138" y="0" width="265" height="20" uuid="ebd8adf9-00a0-40ac-b5ea-a27971cf9014"/>
-				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" isBold="true"/>
-				</textElement>
-				<text><![CDATA[MINISTERIO DE JSUTICIA Y SEGURIDAD PUBLICA]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="416" y="75" width="74" height="20" uuid="85c98463-00e7-493a-ae76-32172a303899"/>
+				<reportElement x="430" y="93" width="55" height="20" uuid="85c98463-00e7-493a-ae76-32172a303899"/>
 				<textElement textAlignment="Right">
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="444" y="61" width="39" height="20" uuid="986bfa12-13bb-4752-a424-6c0dcc7fd5c5"/>
+				<reportElement x="437" y="79" width="39" height="20" uuid="986bfa12-13bb-4752-a424-6c0dcc7fd5c5"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="209" y="92" width="100" height="20" uuid="878e71fc-d2b5-4326-8dc4-6a5ec33dadf7"/>
+				<reportElement x="244" y="93" width="67" height="20" uuid="878e71fc-d2b5-4326-8dc4-6a5ec33dadf7"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="324" y="91" width="79" height="20" uuid="8a249beb-9ed9-44f1-a79b-13ce3f1043cc"/>
+				<reportElement x="338" y="93" width="62" height="20" uuid="8a249beb-9ed9-44f1-a79b-13ce3f1043cc"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="9" y="52" width="86" height="20" uuid="2596b3c8-3c03-49d3-b059-5c0c4fe4e86d"/>
+				<reportElement x="50" y="80" width="76" height="21" uuid="2596b3c8-3c03-49d3-b059-5c0c4fe4e86d"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[pnt_reporte_etpa]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="484" y="61" width="69" height="20" uuid="fa3c18a8-0ca0-47c8-8da5-ddf9aca73969"/>
+				<reportElement x="472" y="79" width="76" height="16" uuid="fa3c18a8-0ca0-47c8-8da5-ddf9aca73969"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="182" y="92" width="39" height="20" uuid="3c67bbc6-018a-44d9-b50e-9546e39db605"/>
+				<reportElement x="215" y="93" width="39" height="20" uuid="3c67bbc6-018a-44d9-b50e-9546e39db605"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<image>
-				<reportElement x="0" y="2" width="111" height="48" uuid="1e8e200d-eabd-4a4d-859a-3b516d7aff03"/>
+				<reportElement x="37" y="37" width="80" height="70" uuid="1e8e200d-eabd-4a4d-859a-3b516d7aff03"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="443" y="0" width="134" height="58" uuid="b9c57412-5dbb-4f16-96a0-c38cbee55ad8"/>
+				<reportElement x="437" y="28" width="70" height="70" uuid="b9c57412-5dbb-4f16-96a0-c38cbee55ad8"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="295" y="91" width="39" height="20" uuid="5255ba6e-bf90-493a-be00-ec2903224c82"/>
+				<reportElement x="311" y="93" width="39" height="20" uuid="5255ba6e-bf90-493a-be00-ec2903224c82"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="138" y="72" width="265" height="20" uuid="7b7a2dcf-48bb-4bab-bcdf-86dcad0d8af2"/>
+				<reportElement x="164" y="79" width="265" height="20" uuid="7b7a2dcf-48bb-4bab-bcdf-86dcad0d8af2"/>
 				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" isBold="true"/>
+					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[ESTADISTICO DE PERSONAL ACTIVO]]></text>
+				<text><![CDATA[Estadìstico de Personal Activo]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="160" y="50" width="265" height="20" uuid="35d9f136-dbf8-43c9-9af3-b16805b77683"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Dirección de Recursos Humanos]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="160" y="66" width="265" height="20" uuid="f465284f-943f-4a3c-8234-5ea9f61d76e5"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
+				</textElement>
+				<text><![CDATA[SISADMRH]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="160" y="34" width="265" height="20" uuid="c9352d4e-f8a1-4324-bf91-def766ca6261"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
 			</staticText>
 		</band>
 	</title>
-	<pageHeader>
-		<band height="4"/>
-	</pageHeader>
 	<columnHeader>
-		<band height="37">
+		<band height="22">
 			<rectangle>
-				<reportElement x="0" y="0" width="552" height="28" backcolor="#FFFFFF" uuid="e9cd414a-d903-47d0-923e-c1e74014aa5c"/>
+				<reportElement x="50" y="0" width="454" height="22" backcolor="#FFFFFF" uuid="e9cd414a-d903-47d0-923e-c1e74014aa5c"/>
 			</rectangle>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="0" width="69" height="28" forecolor="#000000" backcolor="#E6E6E6" uuid="3d993ab9-6305-4bb9-a23f-a339eca014b6"/>
+				<reportElement mode="Transparent" x="50" y="0" width="45" height="22" forecolor="#000000" backcolor="#E6E6E6" uuid="3d993ab9-6305-4bb9-a23f-a339eca014b6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[No. Empleados]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="70" y="0" width="152" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="c70aa98a-8d06-4728-8331-69e9c9215c1c"/>
+				<reportElement mode="Transparent" x="97" y="0" width="125" height="22" forecolor="#000000" backcolor="#E6E6E6" uuid="c70aa98a-8d06-4728-8331-69e9c9215c1c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ubicación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="222" y="0" width="73" height="28" forecolor="#000000" backcolor="#E6E6E6" uuid="a64f9fa6-75a0-49bf-876f-205791d9ffb8"/>
+				<reportElement mode="Transparent" x="222" y="0" width="62" height="22" forecolor="#000000" backcolor="#E6E6E6" uuid="a64f9fa6-75a0-49bf-876f-205791d9ffb8"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[No. Capacitaciones]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="296" y="1" width="147" height="26" forecolor="#000000" backcolor="#E6E6E6" uuid="631eee16-ae86-4372-be95-6f1826e60a72"/>
+				<reportElement mode="Transparent" x="285" y="0" width="164" height="22" forecolor="#000000" backcolor="#E6E6E6" uuid="631eee16-ae86-4372-be95-6f1826e60a72"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tema de Capacitación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="444" y="0" width="111" height="27" forecolor="#000000" backcolor="#E6E6E6" uuid="0e0e635e-29b8-45a7-8e7a-2dd44f54a5c1"/>
+				<reportElement mode="Transparent" x="449" y="0" width="55" height="22" forecolor="#000000" backcolor="#E6E6E6" uuid="0e0e635e-29b8-45a7-8e7a-2dd44f54a5c1"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de Capacitación]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement x="69" y="1" width="1" height="27" uuid="6ba800d0-e107-42ca-bbd2-d9fee909cf1e"/>
+				<reportElement x="96" y="0" width="1" height="22" uuid="6ba800d0-e107-42ca-bbd2-d9fee909cf1e"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="221" y="0" width="1" height="27" uuid="8824cbb0-e9f9-4eb1-8332-7592f470a990"/>
+				<reportElement x="221" y="0" width="1" height="22" uuid="8824cbb0-e9f9-4eb1-8332-7592f470a990"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="295" y="0" width="1" height="27" uuid="25e718ef-2b72-446e-b991-636fdcd517b8"/>
+				<reportElement x="284" y="0" width="1" height="22" uuid="25e718ef-2b72-446e-b991-636fdcd517b8"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="443" y="0" width="1" height="27" uuid="c6d6ca1b-1721-4a54-b280-156d2eeae666"/>
+				<reportElement x="449" y="0" width="1" height="22" uuid="c6d6ca1b-1721-4a54-b280-156d2eeae666"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="28">
+		<band height="14">
 			<textField isStretchWithOverflow="true">
-				<reportElement x="0" y="0" width="69" height="20" uuid="4a7557b2-98ec-47de-8ffc-82afd7e294fa"/>
-				<textElement textAlignment="Center">
+				<reportElement x="54" y="0" width="40" height="14" uuid="4a7557b2-98ec-47de-8ffc-82afd7e294fa"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Noempleados}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="70" y="0" width="152" height="20" uuid="849185a6-9f84-4bdb-b5e1-bd9cfc01ce62"/>
-				<textElement textAlignment="Center">
+				<reportElement x="101" y="0" width="120" height="14" uuid="849185a6-9f84-4bdb-b5e1-bd9cfc01ce62"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Ubicacion}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="222" y="0" width="74" height="20" uuid="155ce77b-4472-4774-8608-3c42469f4b0a"/>
-				<textElement textAlignment="Center">
+				<reportElement x="228" y="0" width="57" height="14" uuid="155ce77b-4472-4774-8608-3c42469f4b0a"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{NoCapacitaciones}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="296" y="0" width="148" height="20" uuid="d678290c-85d3-4bdc-b2a3-f88dc22e1e65"/>
-				<textElement textAlignment="Justified">
+				<reportElement x="293" y="0" width="148" height="14" uuid="d678290c-85d3-4bdc-b2a3-f88dc22e1e65"/>
+				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrecapacitacion}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="444" y="0" width="111" height="20" uuid="2866d9e5-b794-4e36-a253-3404ef6b07a7"/>
-				<textElement textAlignment="Center">
+				<reportElement x="446" y="0" width="57" height="14" uuid="2866d9e5-b794-4e36-a253-3404ef6b07a7"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{FechaCapacitacion}]]></textFieldExpression>
@@ -247,26 +244,18 @@ and c.fechacapacitacionhasta <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<columnFooter>
 		<band/>
 	</columnFooter>
-	<pageFooter>
-		<band height="36">
-			<staticText>
-				<reportElement x="182" y="16" width="192" height="20" uuid="ef966917-64b2-4d44-8eb7-f39230d73d61"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
-			</staticText>
-		</band>
-	</pageFooter>
 	<summary>
-		<band height="30">
+		<band height="19">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="22" y="0" width="530" height="13" backcolor="#FFFFFF" uuid="acb219ed-4389-4d74-875a-943548038a94"/>
+				<reportElement mode="Opaque" x="290" y="6" width="214" height="13" backcolor="#FFFFFF" uuid="acb219ed-4389-4d74-875a-943548038a94"/>
 				<textElement textAlignment="Right">
-					<font fontName="Times New Roman" isUnderline="true"/>
+					<font fontName="Times New Roman" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="417" y="4" width="87" height="1" uuid="8a9e3698-b32f-42f4-82ef-08b45f4d2b21"/>
+			</line>
 		</band>
 	</summary>
 </jasperReport>
