--- a/src/main/resources/templates/fragments/otherreports/renunciasreport.html
+++ b/src/main/resources/templates/fragments/otherreports/renunciasreport.html
@@ -5,14 +5,6 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<!--     <div class="contenedorizq">
-    <label  class="der">
-        
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div><br>-->
 <script> Textheader('pnt_reporte_rvem1',document.title);</script>
     <div class="row">
         <div class="col-md-3">
@@ -27,26 +19,15 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <br>
                 <form class="form-horizontal" id="formreport" th:object="${empleados}">
 
-                    <div class="form-group">
+                    <!--div class="form-group">
                         <label class="col-sm-3 control-label" >Nombre de Empleado:</label>
                         <div class="col-sm-8">
                             <select class="form-control" id="codigo" name="codigo">
                             <option value="0">-- Seleccione El Empleado --</option>
                             <option th:each="d:${empleados}" th:value="${d.codigoempleado}" th:text="${d.nombreempleado}+', '+${d.apellidoempleado}"></option>
                             </select>
-                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
-                    </div>
-<!--                     <div class="form-group">    
-                        <label class="col-sm-3 control-label">Fecha Inicial:</label>
-                        <div class="col-sm-3">
-                            <input type="text" class="form-control" id="fechainicial" name="fechainicial"/>
-                        </div>
-                        <label class="col-sm-2 control-label">Fecha Final:</label>
-                        <div class="col-sm-3">
-                            <input type="text" class="form-control" id="fechafinal" name="fechafinal"/>
-                        </div>
-                    </div>-->
+                    </div-->
  <div class="form-group">
                 <label class="col-sm-5 control-label">Fecha Desde(*):</label>
                 <div class="col-sm-4">
