arreglados error en renuncias y usuario

--- a/src/main/resources/templates/fragments/otherreports/renunciasreport.html
+++ b/src/main/resources/templates/fragments/otherreports/renunciasreport.html
@@ -88,7 +88,7 @@
             dateFormat: 'dd/mm/yy'
         });
         $('#generar').click(function(){
-            $("#formreport").attr('action', '../renuncias/'+ $("#codigo").val().toString());
+            $("#formreport").attr('action', '../renuncias/1'//+ $("#codigo").val().toString());
             $("form#formreport").submit();
             
         });
