--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -92,7 +92,7 @@
                             <span class="popuptext" id="ffinal">Ingrese la Fecha de Caducidad.  . !!</span>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <!--div class="form-group">
                         <label class="col-sm-2 control-label">Fecha de baja:</label>
                         <div class="col-sm-2">
                             <input type="text" placeholder="dia/mes/año"class="form-control fecha_format" id="fchabaja" th:field="*{fechabaja}"/>
@@ -102,7 +102,7 @@
 
                             <span class="popuptext" id="fbajo">Ingrese la Fecha de Baja.  . !!</span>
                         </div>
-                    </div>
+                    </div-->
                     <div class="col-md-12">
                         <div class="row" align="center">
                             <a href="#" th:href="@{/usuarios/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>
