--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_pensionado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_pensionado.jrxml
@@ -29,133 +29,130 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<background>
 		<band/>
 	</background>
-	<title>
-		<band height="113">
-			<textField>
-				<reportElement uuid="9b4c84c3-5c3c-43be-819c-a5f1e3e55e6e" x="414" y="93" width="55" height="20"/>
-				<textElement textAlignment="Right">
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement uuid="79666fe6-93f0-42b6-adc6-bff72b9fdb61" x="158" y="50" width="265" height="20"/>
-				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="9" isBold="false"/>
-				</textElement>
-				<text><![CDATA[Direccion de Recursos Humanos]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="6d432196-300e-4646-9cbb-b80875b4eefe" x="50" y="93" width="114" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Fecha de Generación:]]></text>
-			</staticText>
+	<pageHeader>
+		<band height="118">
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="63655c39-f73f-4fee-a684-d8166c4e20f4" x="115" y="93" width="70" height="20"/>
+				<reportElement x="132" y="95" width="70" height="20" uuid="63655c39-f73f-4fee-a684-d8166c4e20f4"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement x="38" y="42" width="80" height="70" uuid="44d7f26e-6d2d-4c7f-ab3b-d6345f2205c6"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<textField>
+				<reportElement x="243" y="95" width="67" height="20" uuid="a4112afa-b3ff-47d7-b6f5-ece58032077f"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
+			</textField>
 			<staticText>
-				<reportElement uuid="d4395b8e-47cf-4b8a-afe2-c6b5bf42761b" x="158" y="34" width="265" height="20"/>
+				<reportElement x="51" y="82" width="76" height="21" uuid="44db5261-1601-42f7-a000-73af9a922a2f"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[pnt_reporte_ppen]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="310" y="95" width="39" height="20" uuid="bfe24c38-441b-4bec-987e-be8484748400"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="163" y="81" width="265" height="20" uuid="6a8802ea-6b4e-4f0b-98dc-63941fd165e4"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Ministerio de Justicia y Seguridad Publica]]></text>
+				<text><![CDATA[Reporte de Personal Pensionado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="dfbc6c0e-af37-4d58-aaf2-4c95cc526dc2" x="158" y="66" width="265" height="20"/>
-				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="9" isBold="false"/>
+				<reportElement x="214" y="95" width="39" height="20" uuid="d5ac99d8-4e03-4f1f-b83a-21ca723e2114"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<text><![CDATA[SISADMRH]]></text>
+				<text><![CDATA[Desde:]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="337" y="95" width="62" height="20" uuid="7393f81c-d206-4339-a79f-c6a4ec520729"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="422" y="81" width="39" height="20" uuid="93ca6744-3f58-491e-8fe7-0b70222b5983"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Usuario:]]></text>
+			</staticText>
+			<image>
+				<reportElement x="422" y="32" width="70" height="70" uuid="8a644768-1ee9-4b23-9746-37924714de9e"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
+			<textField>
+				<reportElement x="457" y="81" width="76" height="16" uuid="a8241048-dabe-49f9-bd10-c00527057601"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
+			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="4d9820b0-a2b1-4c67-85af-30c2220d992c" x="471" y="93" width="26" height="20"/>
+				<reportElement x="472" y="95" width="26" height="20" uuid="4d9820b0-a2b1-4c67-85af-30c2220d992c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="bfe24c38-441b-4bec-987e-be8484748400" x="309" y="93" width="39" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Hasta:]]></text>
-			</staticText>
-			<textField>
-				<reportElement uuid="a4112afa-b3ff-47d7-b6f5-ece58032077f" x="242" y="93" width="67" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="a8241048-dabe-49f9-bd10-c00527057601" x="456" y="79" width="76" height="16"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{USUARIO}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement uuid="44db5261-1601-42f7-a000-73af9a922a2f" x="50" y="80" width="76" height="21"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[pnt_reporte_ppen]]></text>
-			</staticText>
-			<image>
-				<reportElement uuid="8a644768-1ee9-4b23-9746-37924714de9e" x="421" y="30" width="70" height="70"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
-			</image>
-			<staticText>
-				<reportElement uuid="d5ac99d8-4e03-4f1f-b83a-21ca723e2114" x="213" y="93" width="39" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Desde:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement uuid="93ca6744-3f58-491e-8fe7-0b70222b5983" x="421" y="79" width="39" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Usuario:]]></text>
-			</staticText>
-			<textField>
-				<reportElement uuid="7393f81c-d206-4339-a79f-c6a4ec520729" x="336" y="93" width="62" height="20"/>
-				<textElement>
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
-			</textField>
-			<image>
-				<reportElement uuid="44d7f26e-6d2d-4c7f-ab3b-d6345f2205c6" x="37" y="40" width="80" height="70"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
-			</image>
-			<staticText>
-				<reportElement uuid="6a8802ea-6b4e-4f0b-98dc-63941fd165e4" x="162" y="79" width="265" height="20"/>
+				<reportElement x="159" y="68" width="265" height="20" uuid="dfbc6c0e-af37-4d58-aaf2-4c95cc526dc2"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
-				<text><![CDATA[Reporte de Personal Pensionado]]></text>
+				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="159" y="36" width="265" height="20" uuid="d4395b8e-47cf-4b8a-afe2-c6b5bf42761b"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Ministerio de Justicia y Seguridad Publica]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="51" y="95" width="114" height="20" uuid="6d432196-300e-4646-9cbb-b80875b4eefe"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<text><![CDATA[Fecha de Generación:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="159" y="52" width="265" height="20" uuid="79666fe6-93f0-42b6-adc6-bff72b9fdb61"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="9" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Direccion de Recursos Humanos]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="415" y="95" width="55" height="20" uuid="9b4c84c3-5c3c-43be-819c-a5f1e3e55e6e"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
 		</band>
-	</title>
-	<pageHeader>
-		<band/>
 	</pageHeader>
 	<columnHeader>
 		<band height="14">
 			<rectangle>
-				<reportElement uuid="706802ad-e2c6-4b79-b367-37adce6acada" x="50" y="0" width="439" height="12" backcolor="#FFFFFF"/>
+				<reportElement x="50" y="0" width="439" height="12" backcolor="#FFFFFF" uuid="706802ad-e2c6-4b79-b367-37adce6acada"/>
 			</rectangle>
 			<staticText>
-				<reportElement uuid="782b81cf-5a2f-4f7a-a3f2-0d8bb004eae1" mode="Transparent" x="164" y="1" width="116" height="12" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="164" y="1" width="116" height="12" forecolor="#000000" backcolor="#E6E6E6" uuid="782b81cf-5a2f-4f7a-a3f2-0d8bb004eae1"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 					<paragraph tabStopWidth="14"/>
@@ -163,7 +160,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<text><![CDATA[Nombre de Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="bfb1a1e6-00ce-4cb7-8fda-1bd9b4b47c09" mode="Transparent" x="291" y="0" width="47" height="12" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="291" y="0" width="47" height="12" forecolor="#000000" backcolor="#E6E6E6" uuid="bfb1a1e6-00ce-4cb7-8fda-1bd9b4b47c09"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 					<paragraph tabStopWidth="14"/>
@@ -171,7 +168,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<text><![CDATA[Salario($)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="8e04b80d-49e3-4e7c-ba8f-082d74e20660" mode="Transparent" x="331" y="1" width="48" height="12" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="331" y="1" width="48" height="12" forecolor="#000000" backcolor="#E6E6E6" uuid="8e04b80d-49e3-4e7c-ba8f-082d74e20660"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 					<paragraph tabStopWidth="14"/>
@@ -179,7 +176,7 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<text><![CDATA[Año]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="50b17b73-84ef-492e-80e8-2f479c44cd44" mode="Transparent" x="379" y="1" width="47" height="12" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="379" y="1" width="47" height="12" forecolor="#000000" backcolor="#E6E6E6" uuid="50b17b73-84ef-492e-80e8-2f479c44cd44"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 					<paragraph tabStopWidth="14"/>
@@ -187,16 +184,16 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<text><![CDATA[Mes]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement uuid="b9e00e82-9461-4369-be09-c7a5b0b023e1" x="341" y="0" width="1" height="12"/>
+				<reportElement x="341" y="0" width="1" height="12" uuid="b9e00e82-9461-4369-be09-c7a5b0b023e1"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement uuid="67964a78-c458-4713-b4f1-10f8446d44e8" x="382" y="0" width="1" height="12"/>
+				<reportElement x="382" y="0" width="1" height="12" uuid="67964a78-c458-4713-b4f1-10f8446d44e8"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement uuid="63bd94ad-e942-4f1d-849b-a536a41753d6" x="426" y="0" width="1" height="12"/>
+				<reportElement x="426" y="0" width="1" height="12" uuid="63bd94ad-e942-4f1d-849b-a536a41753d6"/>
 			</line>
 			<staticText>
-				<reportElement uuid="5967908c-07e4-4274-b6a5-7998a7c41ce9" mode="Transparent" x="51" y="0" width="111" height="12" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="51" y="0" width="111" height="12" forecolor="#000000" backcolor="#E6E6E6" uuid="5967908c-07e4-4274-b6a5-7998a7c41ce9"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 					<paragraph tabStopWidth="14"/>
@@ -204,10 +201,10 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<text><![CDATA[Nombre del Empleado]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement uuid="f898543d-758b-4c34-825e-fa6645b17de6" x="162" y="0" width="1" height="12"/>
+				<reportElement x="162" y="0" width="1" height="12" uuid="f898543d-758b-4c34-825e-fa6645b17de6"/>
 			</line>
 			<staticText>
-				<reportElement uuid="e8801be8-7ec8-4b3d-96bc-aeaf4b652996" mode="Transparent" x="427" y="1" width="62" height="12" forecolor="#000000" backcolor="#E6E6E6"/>
+				<reportElement mode="Transparent" x="427" y="1" width="62" height="12" forecolor="#000000" backcolor="#E6E6E6" uuid="e8801be8-7ec8-4b3d-96bc-aeaf4b652996"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 					<paragraph tabStopWidth="14"/>
@@ -215,49 +212,49 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 				<text><![CDATA[Institucion]]></text>
 			</staticText>
 			<line direction="BottomUp">
-				<reportElement uuid="73803e6b-d952-4344-87a0-35433a3b128e" x="284" y="0" width="1" height="12"/>
+				<reportElement x="284" y="0" width="1" height="12" uuid="73803e6b-d952-4344-87a0-35433a3b128e"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="15">
 			<textField isStretchWithOverflow="true" pattern="">
-				<reportElement uuid="49110043-0eb6-4a2a-9fc5-81288c3d9cde" mode="Transparent" x="177" y="0" width="106" height="14"/>
+				<reportElement mode="Transparent" x="177" y="0" width="106" height="14" uuid="49110043-0eb6-4a2a-9fc5-81288c3d9cde"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Nombre de Puesto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="#,##0.00">
-				<reportElement uuid="a76484c8-d591-4ac8-b2a6-1054b186d3ae" mode="Transparent" x="284" y="0" width="54" height="14"/>
+				<reportElement mode="Transparent" x="284" y="0" width="54" height="14" uuid="a76484c8-d591-4ac8-b2a6-1054b186d3ae"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Salario}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="">
-				<reportElement uuid="e4f2d945-a4b3-4cf0-bf94-26dd86c21e64" mode="Transparent" x="342" y="0" width="36" height="14"/>
+				<reportElement mode="Transparent" x="342" y="0" width="36" height="14" uuid="e4f2d945-a4b3-4cf0-bf94-26dd86c21e64"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Año}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement uuid="a5dde008-fdbd-4ff1-9c05-7c2728ccd0f6" mode="Transparent" x="383" y="0" width="39" height="14"/>
+				<reportElement mode="Transparent" x="383" y="0" width="39" height="14" uuid="a5dde008-fdbd-4ff1-9c05-7c2728ccd0f6"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.text.DateFormatSymbols().getShortMonths()[(Integer.parseInt(String.valueOf($F{Mes})))- 1].toUpperCase()]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="12010363-1647-41bd-888e-946e1273c1a6" mode="Transparent" x="429" y="0" width="60" height="14"/>
+				<reportElement mode="Transparent" x="431" y="0" width="59" height="14" uuid="12010363-1647-41bd-888e-946e1273c1a6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Institucion Pensionadora}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="d09befce-c549-4da6-99e9-5b49ea660cbb" x="53" y="0" width="109" height="14"/>
+				<reportElement x="53" y="0" width="109" height="14" uuid="d09befce-c549-4da6-99e9-5b49ea660cbb"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
@@ -271,21 +268,21 @@ and e.fechaingresoministerio <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 	<summary>
 		<band height="18">
 			<staticText>
-				<reportElement uuid="4fb4bac3-620d-4ebd-88a4-460901697b63" x="265" y="2" width="41" height="13"/>
+				<reportElement x="265" y="2" width="41" height="13" uuid="4fb4bac3-620d-4ebd-88a4-460901697b63"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Total $]]></text>
 			</staticText>
 			<textField pattern="#,##0.00">
-				<reportElement uuid="576b5ff4-1e96-46bd-b79d-10ca930fc3dc" x="263" y="2" width="79" height="14"/>
+				<reportElement x="263" y="2" width="79" height="14" uuid="576b5ff4-1e96-46bd-b79d-10ca930fc3dc"/>
 				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{Salario_1}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="52f0dd76-a642-4bf5-8388-406406a8ce61" x="302" y="2" width="40" height="1"/>
+				<reportElement x="302" y="2" width="40" height="1" uuid="52f0dd76-a642-4bf5-8388-406406a8ce61"/>
 			</line>
 		</band>
 	</summary>
